--- a/client/src/index.css
+++ b/client/src/index.css
@@ -165,7 +165,26 @@ nav{
 .add-Department form h2{
   color: black;
 }
-
+.content form label{
+  color: black;
+}
+.Admin-info{
+  display: flex;
+  justify-content: start;
+  align-items: start;
+  gap: 50px;
+}
+.info-box{
+  border: 1px solid Black;
+  background-color: rgb(235, 235, 161);
+  border-radius: 0%;
+  padding: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+}
 
 
 
@@ -231,6 +250,11 @@ thead th {
   position: sticky;
   top: 0;
   z-index: 1;
+}
+td img{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
 }
 
 /* Make the table scrollable on smaller screens */
