--- a/client/src/index.css
+++ b/client/src/index.css
@@ -90,7 +90,8 @@ label{
   left: 0;
   width: 300px;
   height: 100vh;
-  background-color: rgb(13, 13, 54);
+  background-color: rgb(19, 3, 49);
+ box-shadow: 0px 0px 20px black;
 }
 .side-nav .nav-links{
   display: flex;
@@ -124,11 +125,12 @@ label{
 nav{
   width: 100%;
   height: 80px;
-  background-color: rgb(65, 65, 82);
+  background-color: rgb(19, 3, 49);
   display: flex;
   justify-content: space-between;
   padding: 20px;
   font-size: 25px;
+  color: white;
 }
 .content{
   width: calc(100% - 300px);
@@ -186,6 +188,20 @@ nav{
   flex-direction: column;
   gap: 20px;
 }
+.profile-file{
+  display: flex;
+  justify-content: start;
+  align-items: start;
+  flex-direction:row;
+  flex-wrap:nowrap;
+  gap: 0px;
+}
+.profile-file img{
+  width:100px;
+  height: auto;
+}
+
+
 
 
 
