Update: Completed the check-in-out

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -250,9 +250,14 @@ main{
 }
 .employee-detail p{
   font-size: 20px;
-
 }
-
+.check-in-out{
+  width: 100%;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  padding: 20px;
+}
 
 
 
