--- a/client/src/index.css
+++ b/client/src/index.css
@@ -258,8 +258,24 @@ main{
   align-items: center;
   padding: 20px;
 }
-
-
+.logout{
+  display:flex;
+  gap: 20px;
+  flex-direction: row;
+  align-items: center;
+}
+.charts{
+  display: flex;
+  padding: 50px;
+  align-items: center;
+}
+.chart-box{
+  width: 50%;
+  height: 300px;
+  padding: 20px;
+  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.5), inset 0px -3px 6px -2px rgba(0, 0, 0, 0.3);
+  background-color: rgb(219, 219, 219);
+}
 
 
 
